[package]
name = "rusher-bench"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
futures = "0.3.30"
http = "1.2.0"
rusher-core = { path = "../rusher-core" }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
tokio-tungstenite = "0.26.1"
