[package]
name = "rusher-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
hmac = "0.12.1"
http = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = "0.10.8"
url = "2.5.4"

[dev-dependencies]
hex = "0.4.3"
