[package]
name = "rusher-pubsub"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
async-stream = "0.3.6"
async-trait = "0.1.80"
fred = "9.0.1"
futures = { version = "0.3.30", default-features = false, features = ["alloc", "async-await", "std"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }

[dev-dependencies]
testcontainers = "0.16.7"
