[package]
name = "rusher-server"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
async-trait = "0.1.80"
axum = { version = "0.7.5", features = ["http2", "ws"] }
futures = "0.3.30"
hex = "0.4.3"
md5 = "0.7.0"
rand = "0.8.5"
rusher-core = { path = "../rusher-core" }
rusher-pubsub = { path = "../rusher-pubsub" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
