[package]
name = "rusher-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1.80"
axum = { version = "0.7.5", features = ["http2", "ws"] }
futures = { workspace = true }
hex = "0.4.3"
md5 = "0.7.0"
rand = { workspace = true }
rusher-core = { workspace = true }
rusher-pubsub = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = { workspace = true }
