[package]
name = "rusher"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.23", features = ["cargo", "derive", "env"] }
futures = { version = "0.3.30", default-features = false, features = ["alloc", "async-await", "std"] }
rusher-core = { version = "0.0.0", path = "../rusher-core" }
rusher-pubsub = { path = "../rusher-pubsub" }
rusher-server = { path = "../rusher-server" }
serde = { version = "1.0.216", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.19"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
