[package]
name = "rusher"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5.23", features = ["cargo", "derive", "env"] }
futures = { workspace = true }
rusher-core = { workspace = true }
rusher-pubsub = { workspace = true }
rusher-server = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
toml = "0.8.19"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
